--- a/EmployeeManagement/Web.config
+++ b/EmployeeManagement/Web.config
@@ -11,6 +11,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+         <authentication mode="Forms">
+		  <forms loginUrl="Home/Login"></forms>
+	  </authentication>
 	  <customErrors mode="On">
 		  <error statusCode="404" redirect="~/Error/NotFound" />
 		  <error statusCode="500" redirect="~/Error/InternalServerError" />
